--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "dependencies": {
     "body-parser": "^2.2.0",
+    "css-loader": "^7.1.2",
     "express": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
+    "jquery": "^3.7.1",
     "pug": "^3.0.3",
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "rxjs": "^7.8.2",
+    "style-loader": "^4.0.0"
   },
   "name": "lab8part1",
+  "private": true,
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode development"
   },
   "author": "Ilya Biryuk",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "webpack": "^5.99.8",
+    "webpack-cli": "^6.0.1"
+  }
 }
